reset_password_page_v3

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "rewrites": [
-    { "source": "/reset-password", "destination": "/index.html" },
+    {
+      "source": "/reset-password",
+      "destination": "/index.html",
+      "has": [
+        {
+          "type": "query",
+          "key": "code",
+          "value": "(?<code>.*)"
+        }
+      ]
+    },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
