--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_sign_in: ^6.3.0
   web: ^1.1.1
   flutter_secure_storage: ^9.2.4
+  encrypt: ^5.0.3
+  cryptography: ^2.7.0
 
 dev_dependencies:
   flutter_test:
