--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   encrypt: ^5.0.3
   cryptography: ^2.7.0
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
@@ -80,17 +81,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: NotoSans
+      fonts:
+        - asset: fonts/NotoSans-Regular.ttf
+  #      - asset: fonts/Schyler-Italic.ttf
+  #        style: italic
+  #  - family: Trajan Pro
+  #    fonts:
+  #      - asset: fonts/TrajanPro.ttf
+  #      - asset: fonts/TrajanPro_Bold.ttf
+  #        weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
