--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   encrypt: ^5.0.3
   cryptography: ^2.7.0
   universal_html: ^2.2.4
+  share_plus: ^11.0.0
+  countdown_progress_indicator: ^0.1.3
+  progress_bar_countdown: ^0.0.2
 
 dev_dependencies:
   flutter_test:
