--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   countdown_progress_indicator: ^0.1.3
   progress_bar_countdown: ^0.0.2
   universal_io: ^2.0.4
+  gpassword: ^1.0.0
   
 
 dev_dependencies:
