--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/icono.png"
+  Windows: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -77,6 +78,8 @@ flutter:
   uses-material-design: true
   assets:
    - assets/google_logo.png
+   - assets/icon.png
+   - assets/images/icono.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -106,3 +109,4 @@ flutter:
   #        weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
