--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/reset-password", "destination": "/index.html" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/reset-password", "destination": "/" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
